--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     rel="stylesheet" />
   <link rel="icon" href="/static/images/favicon.png" />
   <meta name="description" content="Olympia Gym - pro ty co chtejí cvičit." />
-  <meta property="og:title" content="Olympia Gym - provozní řád" />
+  <meta property="og:title" content="Olympia Gym - Galerie" />
   <meta property="og:description" content="Olympia Gym - pro ty co chtejí cvičit." />
   <meta property="og:image" content="/static/images/og_image.png" />
   <meta property="og:url" content="https://olympiagym.cz/rules.html" />
