--- a/en/contact_en.html
+++ b/en/contact_en.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Olympia Gym - provozní řád</title>
+  <title>Olympia Gym - kontaktujte nás</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/static/output.css" />
   <link
@@ -13,7 +13,7 @@
     rel="stylesheet" />
   <link rel="icon" href="/static/images/favicon.png" />
   <meta name="description" content="Olympia Gym - pro ty co chtejí cvičit." />
-  <meta property="og:title" content="Olympia Gym - Galerie" />
+  <meta property="og:title" content="Olympia Gym - kontaktujte nás" />
   <meta property="og:description" content="Olympia Gym - pro ty co chtejí cvičit." />
   <meta property="og:image" content="/static/images/og_image.png" />
   <meta property="og:url" content="https://olympiagym.cz/rules.html" />
@@ -36,127 +36,54 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
-        <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
-        <a href="en/index_en.html"
-          class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
+        <a href="../index.html"
+          class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
           class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
 
-  <section class="">
-
-    <div class="grid grid-cols-1 gap-4 p-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/dumbells.jpeg"
-          alt="dumbells"
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
+  <section class="px-6 py-24 sm:py-16 lg:px-8">
+    <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:py-20 lg:px-8">
+      <div class="max-w-2xl mx-auto text-center lg:max-w-4xl">
+        <h2 class="text-3xl font-extrabold text-gray-900">Navštivte nás</h2>
+        <p class="mt-4 text-lg text-gray-500">V objektu Olympie naproti Alberta kousek od Globusu.</p>
       </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5256..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
+      <div class="mt-16 lg:mt-20">
+        <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
+          <div class="overflow-hidden rounded-lg">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1268.7516117774915!2d18.155620778792336!3d49.84386094541286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e1006ea78481%3A0xff3b65ba19957e14!2sOlympia%20Gym%2024%2F7!5e0!3m2!1sen!2scz!4v1734029799431!5m2!1sen!2scz"
+              width="100%" height="480" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+          <div>
+            <div class="max-w-full mx-auto overflow-hidden rounded-lg">
+              <div class="px-6 py-4">
+                <h3 class="text-lg font-medium text-gray-900">Naše adresa</h3>
+                <p class="mt-1 text-gray-600">Ludvíka Podéště 1974/25, 708 00 Ostrava</p>
+              </div>
+              <div class="px-6 py-4 border-t border-gray-200">
+                <h3 class="text-lg font-medium text-gray-900">Otevřeno</h3>
+                <p class="mt-1 text-gray-600">Pondělí - Neděle: Nonstop</p>
+              </div>
+              <div class="px-6 py-4 border-t border-gray-200">
+                <h3 class="text-lg font-medium text-gray-900">Contact</h3>
+                <p class="mt-1 text-gray-600">Email: olympiagymcz@gmail.com</p>
+                <p class="mt-1 text-gray-600">Telefon: +420 735 935 028</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5259..jpeg"
-          alt="Image 1"
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5260..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5262..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5263..jpeg"
-          alt="Image 1"
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5264..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5265..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5276..jpeg"
-          alt="Image 1"
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5278..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5279..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-      <div class="relative cursor-pointer group">
-        <img
-          src="static/images/gallery/IMG_5297..jpeg"
-          alt=""
-          class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
-        />
-      </div>
-
-
-      <!-- Repeat this div for each image -->
     </div>
-
-
-
   </section>
 
   <footer class="">
