--- a/en/gallery_en.html
+++ b/en/gallery_en.html
@@ -36,15 +36,15 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
-        <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
-        <a href="en/index_en.html"
-          class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
+        <a href="../index.html"
+          class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
           class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
       </div>
@@ -57,7 +57,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/dumbells.jpeg"
+          src="/static/images/gallery/dumbells.jpeg"
           alt="dumbells"
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -65,7 +65,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5256..jpeg"
+          src="/static/images/gallery/IMG_5256..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -73,7 +73,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5259..jpeg"
+          src="/static/images/gallery/IMG_5259..jpeg"
           alt="Image 1"
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -81,7 +81,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5260..jpeg"
+          src="/static/images/gallery/IMG_5260..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -89,7 +89,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5262..jpeg"
+          src="/static/images/gallery/IMG_5262..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -97,7 +97,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5263..jpeg"
+          src="/static/images/gallery/IMG_5263..jpeg"
           alt="Image 1"
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -105,7 +105,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5264..jpeg"
+          src="/static/images/gallery/IMG_5264..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -113,7 +113,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5265..jpeg"
+          src="/static/images/gallery/IMG_5265..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -121,7 +121,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5276..jpeg"
+          src="/static/images/gallery/IMG_5276..jpeg"
           alt="Image 1"
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -129,7 +129,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5278..jpeg"
+          src="/static/images/gallery/IMG_5278..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -137,7 +137,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5279..jpeg"
+          src="/static/images/gallery/IMG_5279..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
@@ -145,7 +145,7 @@
 
       <div class="relative cursor-pointer group">
         <img
-          src="static/images/gallery/IMG_5297..jpeg"
+          src="/static/images/gallery/IMG_5297..jpeg"
           alt=""
           class="object-cover w-full transition-transform transform scale-100 rounded-lg h-96 group-hover:scale-105"
         />
