--- a/en/index_en.html
+++ b/en/index_en.html
@@ -36,15 +36,15 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
-        <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
-        <a href="en/index_en.html"
-          class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
+        <a href="../index.html"
+          class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
           class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
       </div>
@@ -91,7 +91,7 @@
       <div class="flex items-center justify-between gap-8 mb-4 sm:mb-8 md:mb-12">
         <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
 
-        <a href="gallery.html"
+        <a href="gallery_en.html"
           class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
           Více
           <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -106,7 +106,7 @@
         <!-- image - start -->
         <div
           class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 md:h-auto md:row-span-2 group">
-          <img src="static/images/gym/cardio.jpeg" loading="lazy" alt="kardio zóna"
+          <img src="/static/images/gym/cardio.jpeg" loading="lazy" alt="kardio zóna"
             class="absolute inset-0 object-cover object-center w-full h-full" />
 
           <!--<span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Kardio zóna</span>-->
@@ -115,7 +115,7 @@
 
         <!-- image - start -->
         <div class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
-          <img src="static/images/gym/dumbells2.jpeg" loading="lazy" alt="jednoručky"
+          <img src="/static/images/gym/dumbells2.jpeg" loading="lazy" alt="jednoručky"
             class="absolute inset-0 object-cover object-center w-full h-full" />
 
         </div>
@@ -123,7 +123,7 @@
 
         <!-- image - start -->
         <div class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
-          <img src="static/images/gym/barbells.jpeg" loading="lazy" alt="obouručky"
+          <img src="/static/images/gym/barbells.jpeg" loading="lazy" alt="obouručky"
             class="absolute inset-0 object-cover object-center w-full h-full" />
 
         </div>
@@ -131,7 +131,7 @@
 
         <!-- image - start -->
         <div class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
-          <img src="static/images/gym/squat.jpeg" loading="lazy" alt="dřepy"
+          <img src="/static/images/gym/squat.jpeg" loading="lazy" alt="dřepy"
             class="absolute inset-0 object-cover object-center w-full h-full" />
 
         </div>
@@ -140,14 +140,14 @@
         <!-- image - start -->
         <div
           class="relative flex items-end row-span-2 overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group md:h-auto">
-          <img src="static/images/gym/legpress.jpeg" loading="lazy" alt="roznožování a snožování"
+          <img src="/static/images/gym/legpress.jpeg" loading="lazy" alt="roznožování a snožování"
             class="absolute inset-0 object-cover object-center w-full h-full" />
         </div>
         <!-- image - end -->
 
         <!-- image - start -->
         <div class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
-          <img src="static/images/gym/multipress.jpeg" loading="lazy" alt="multipress"
+          <img src="/static/images/gym/multipress.jpeg" loading="lazy" alt="multipress"
             class="absolute inset-0 object-cover object-center w-full h-full" />
 
         </div>
@@ -155,7 +155,7 @@
 
         <!-- image - start -->
         <div class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
-          <img src="static/images/gym/legs.jpeg" loading="lazy" alt="roznožování a snožování"
+          <img src="/static/images/gym/legs.jpeg" loading="lazy" alt="roznožování a snožování"
             class="absolute inset-0 object-cover object-center w-full h-full" />
 
         </div>
