--- a/en/rules_en.html
+++ b/en/rules_en.html
@@ -36,15 +36,15 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
-        <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
-        <a href="en/index_en.html"
-          class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
+        <a href="../index.html"
+          class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
           class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
       </div>
